<resources>
    <string name="app_name">Song Lyrics</string>
    <string name="application_title">Song Lyrics Search</string>
    <string name="light_mode">light mode</string>
    <string name="dark_mode">dark mode</string>
    <string name="artist_field_input_hint">Artist or Group Name</string>
    <string name="song_field_input_hint">Song Title</string>
    <string name="search_button_text">Search for it!</string>
    <string name="need_help_clickable">Need Help?</string>
    <string name="author_name">Andressa Machado</string>
    <string name="application_version">version 1.0</string>
    <string name="author_photo">author photo</string>
    <string name="drawer_instructions_label">Instructions</string>
    <string name="drawer_about_api_label">About the API</string>
    <string name="drawer_github_page_label">GitHub Page</string>
    <string name="drawer_linkedin_label">LinkedIn Profile</string>
    <string name="about_this_project">About this Project</string>

    <string name="info_alert_dialog_title">Instructions</string>
    <string name="info_alert_dialog_message">1. Insert the name of the Artist and the title of the song to find yourself singing!
        \n\n 2. Add it to your list of favorite songs by clicking on the [make it favorite] checkbox in the song\`s page
        \n\n 3. You can find a list of previously searched songs on the main page
        \n\n 4. Your favorites are indicated by the full star
        \n\n 5. Click on a song in your song history to quickly go to the lyric again
        \n\n 6. You can do a quick search on Google by clicking on the Google icon
        \n\n 7. You can switch the style to dark/light by using the switch on the top right
        \n\n Have fun!! </string>
    <string name="alert_dialog_positive_btn">Got it!</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="make_it_favorite">Make it favorite</string>
    <string name="progress_bar_message">loading ...</string>
    <string name="delete_dialog">Do you want to delete this record?</string>
    <string name="delete_no">no, that is fine</string>
    <string name="delete_yes">Yes, please</string>
    <string name="toast_error_message">lyric not found</string>
    <string name="concatenation_song_searched_info"> by </string>
    <string name="artist_image">artist image</string>
    <string name="app_subtitle">Your application to sing together</string>
</resources>