<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/drawer_instructions"
        android:title="@string/drawer_instructions_label"
        android:icon="@drawable/ic_drawer_instructions"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/drawer_about_api"
        android:title="@string/drawer_about_api_label"
        android:icon="@drawable/ic_drawer_about_api"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/drawer_github"
        android:title="@string/drawer_github_page_label"
        android:icon="@drawable/ic_github"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/drawer_linkedin"
        android:title="@string/drawer_linkedin_label"
        android:icon="@drawable/ic_linkedin"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>
</menu>